image search fixes, i18n

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -19,6 +19,8 @@ facet.INSTITUTION=Institution Pages
 facet.COLLECTION=Collection Pages
 facet.DATAPROVIDER=Data Provider Pages
 facet.DATASET=Dataset Pages
+facet.DATARESOURCE=Dataset Pages
+facet.LAYER=Spatial layer
 facet.REGION=Region Pages
 facet.WORDPRESS=Site Pages
 facet.Rank=Taxonomic rank
@@ -109,20 +111,12 @@ rank.division=Division
 idxtype.TAXON=Species
 idxtype.INSTITUTION=Institution
 idxtype.COLLECTION=Collection
-idxtype.DATAPROVIDER=Data Provider
+idxtype.DATAPROVIDER=Data provider
 idxtype.DATASET=Dataset
+idxtype.DATARESOURCE=Data resource
 idxtype.REGION=Region
 idxtype.WORDPRESS=Site Page
-idxtype.LAYERS=Layer
-
-idxType.TAXON=Species
-idxType.INSTITUTION=Institution
-idxType.COLLECTION=Collection
-idxType.DATAPROVIDER=Data Provider
-idxType.DATASET=Dataset
-idxType.REGION=Region
-idxType.WORDPRESS=Site Page
-idxType.LAYERS=Layer
+idxtype.LAYER=Spatial layer
 
 region.Australia=AU
 region.South\ Australia=SA
