generic layout fixes

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -44,6 +44,7 @@ facet.speciesGroup=Lifeforms
 facet.imageAvailable=Image available
 facet.taxonomicStatus=Taxonomic status
 facet.establishmentMeans=Establishment means
+facet.datasetName=Dataset
 
 facet.conservationStatusAUS=Conservation status in Australia
 facet.conservationStatusACT=Conservation status in ACT
