various changes for AoLS release

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -45,6 +45,7 @@ facet.imageAvailable=Image available
 facet.taxonomicStatus=Taxonomic status
 facet.establishmentMeans=Establishment means
 facet.datasetName=Dataset
+facet.taxonGroup_s=Taxon group
 
 facet.conservationStatusAUS=Conservation status in Australia
 facet.conservationStatusACT=Conservation status in ACT
