* Allow ordered common names * Allow additional identifiers * Ensure fields supplied by bie-index and fields used in show.gsp match

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -119,6 +119,8 @@ idxtype.DATARESOURCE=Data resource
 idxtype.REGION=Region
 idxtype.WORDPRESS=Site Page
 idxtype.LAYER=Spatial layer
+idxtype.COMMON=Common Name
+idxtype.IDENTIFIER=Species Identifier
 
 region.Australia=AU
 region.South\ Australia=SA
