changes for locality searches
changes for locality searches and falling back to google geocode search

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -117,6 +117,7 @@ idxtype.DATAPROVIDER=Data provider
 idxtype.DATASET=Dataset
 idxtype.DATARESOURCE=Data resource
 idxtype.REGION=Region
+idxtype.LOCALITY=Locality
 idxtype.WORDPRESS=Site Page
 idxtype.LAYER=Spatial layer
 idxtype.COMMON=Common Name
