--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -34,6 +34,7 @@ facet.australian_s=Recorded in Australia
 facet.categories=Category
 facet.speciesGroup=Lifeform
 facet.speciesSubgroup=Species groups
+facet.isLocatedInHubCountry_b=Recorded in Australia
 facet.hasImage=Has image
 facet.authority_s=Name authority
 facet.dataset=Checklist
@@ -66,6 +67,10 @@ facet.category_QLD_m_s=QLD Category
 facet.category_SA_m_s=SA Category
 facet.category_WA_m_s=WA Category
 facet.category_NT_m_s=NT Category
+
+isLocatedInHubCountry_b.true=Yes
+imageAvailable.no=No
+imageAvailable.yes=Yes
 
 rank.kingdom=Kingdom
 rank.phylum=Phylum
