--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -35,6 +35,7 @@ facet.categories=Category
 facet.speciesGroup=Lifeform
 facet.speciesSubgroup=Species groups
 facet.isLocatedInHubCountry_b=Recorded in Australia
+facet.locatedInHubCountry=Recorded in Australia
 facet.hasImage=Has image
 facet.authority_s=Name authority
 facet.dataset=Checklist
@@ -69,8 +70,11 @@ facet.category_WA_m_s=WA Category
 facet.category_NT_m_s=NT Category
 
 isLocatedInHubCountry_b.true=Yes
+locatedInHubCountry.true=Yes
 imageAvailable.no=No
+imageAvailable.false=No
 imageAvailable.yes=Yes
+imageAvailable.true=Yes
 
 rank.kingdom=Kingdom
 rank.phylum=Phylum
