Fixes for gallery tab

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -167,3 +167,7 @@ imageUrl=Image
 pestStatus=Pest Status
 author=Author
 acceptedConceptName=Scientific Name for Accepted Concept
+
+images.heading.type=Types
+images.heading.specimen=Specimens
+images.heading.other=Images
