--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -171,3 +171,6 @@ acceptedConceptName=Scientific Name for Accepted Concept
 images.heading.type=Types
 images.heading.specimen=Specimens
 images.heading.other=Images
+
+overview.map.button.records.list=View records
+overview.map.button.records.map=View interactive map
