AtlasOfLivingAustralia/data-management#219 added feature to view image on leaflet added option to select between leaflet and modal dialog users can rate an image if they are logged in added collapse expand button on each image sections added a new image section 'Misidentified' image section 'images' and 'misidentified' are sorted on identification qualifier field

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -171,6 +171,7 @@ acceptedConceptName=Scientific Name for Accepted Concept
 images.heading.type=Types
 images.heading.specimen=Specimens
 images.heading.other=Images
+images.heading.uncertain=Misidentified
 
 overview.map.button.records.list=View records
 overview.map.button.records.map=View interactive map
