Added JSON links to species page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -174,3 +174,6 @@ images.heading.other=Images
 
 overview.map.button.records.list=View records
 overview.map.button.records.map=View interactive map
+show.json=JSON
+show.rdf=RDF
+show.view.json.title=View JSON document (data interchange format)
