Show more detailed taxonomic status information

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -177,3 +177,65 @@ overview.map.button.records.map=View interactive map
 show.json=JSON
 show.rdf=RDF
 show.view.json.title=View JSON document (data interchange format)
+
+identifierFormat.lsid=lsid
+identifierFormat.lsid.detail=An identifier in Life Sciences Identifier format
+identifierFormat.url=url
+identifierFormat.url.detail=An identifier that is a resolvable URL
+
+identifierStatus.current=current
+identifierStatus.current.detail=An identifier in current use
+identifierStatus.historical=historical
+identifierStatus.historical.detail=An identifier that is not in current use
+identifierStatus.replaced=replaced
+identifierStatus.replaced.detail=An identifier that has been replaced by a more recent identifier
+identifierStatus.unknown=unknown
+identifierStatus.unknown.detail=An identifier of uncertain status
+
+identifierType.name=scientific name
+identifierType.name.detail=An identifier for the scientific name for a taxon
+identifierType.taxon=taxon
+identifierType.taxon.detail=An identifier for the current information about a taxon
+identifierType.taxonConcept=taxon concept
+identifierType.taxonConcept.detail=An identifier for a taxon definition and its relationship to other taxa
+identifierType.vernacular=vernacular name
+identifierType.vernacular.detail=An identifier for a vernacular (common) name for a taxon
+
+taxonomicStatus.accepted=Accepted
+taxonomicStatus.accepted.annotation=accepted
+taxonomicStatus.accepted.detail=The status of a taxon according to the taxonomic judgement of a cited authority
+taxonomicStatus.accepted.format=<span class="accepted-name">{0}</span>
+taxonomicStatus.excluded=Excluded
+taxonomicStatus.excluded.annotation=excluded
+taxonomicStatus.excluded.detail=A name that has been excluded from occurring in a region
+taxonomicStatus.excluded.format=<span class="excluded-name">{0}&nbsp;- excluded&nbsp;name</span>
+taxonomicStatus.homotypicSynonym=Homotypic/Objective Synonym
+taxonomicStatus.homotypicSynonym.annotation=homotypic/objective
+taxonomicStatus.homotypicSynonym.detail=An objective synonym based on the same types
+taxonomicStatus.homotypicSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.heterotypicSynonym=Heteroptypic/Subjective Synonym
+taxonomicStatus.heterotypicSynonym.annotation=heterotypic/subjective
+taxonomicStatus.heterotypicSynonym.detail=A subjective synonym based on different types
+taxonomicStatus.heterotypicSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.proParteSynonym=Pro-parte Synonym
+taxonomicStatus.proParteSynonym.annotation=pro-parte
+taxonomicStatus.proParteSynonym.detail=Some specimens of the original type series have been assigned to a new type
+taxonomicStatus.proParteSynonym.format=<span class="proparte-name synonym-name">{0} <span class="accepted-name">(pro-parte&nbsp;accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.misapplied=Misapplied
+taxonomicStatus.misapplied.annotation=misapplied
+taxonomicStatus.misapplied.detail=A name that has been misapplied to another taxon in a publication
+taxonomicStatus.misapplied.format=<span class="misapplied-name">{0} <span class="accepted-name">(misapplied&nbsp;to&nbsp;{1})</span></span>
+taxonomicStatus.name=Name
+taxonomicStatus.name.annotation=name
+taxonomicStatus.name.detail=A scientific name
+taxonomicStatus.name.format=<span class="taxon-name">{0}</span>
+taxonomicStatus.synonym=Synonym
+taxonomicStatus.synonym.annotation=synonym
+taxonomicStatus.synonym.detail=A name that is a synonym of the accepted name
+taxonomicStatus.synonym.format=<span class="synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.unplaced=Unplaced
+taxonomicStatus.unplaced.annotation=unplaced
+taxonomicStatus.unplaced.detail=A scientific name that has not been placed in a taxonomic tree
+taxonomicStatus.unplaced.format=<span class="unplaced-name">{0}</span>
+
+
