More information on taxonomic status. Filtering on taxonomic status

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -209,14 +209,18 @@ taxonomicStatus.excluded=Excluded
 taxonomicStatus.excluded.annotation=excluded
 taxonomicStatus.excluded.detail=A name that has been excluded from occurring in a region
 taxonomicStatus.excluded.format=<span class="excluded-name">{0}&nbsp;- excluded&nbsp;name</span>
-taxonomicStatus.homotypicSynonym=Homotypic/Objective Synonym
-taxonomicStatus.homotypicSynonym.annotation=homotypic/objective
+taxonomicStatus.homotypicSynonym=Homotypic Synonym
+taxonomicStatus.homotypicSynonym.annotation=homotypic
 taxonomicStatus.homotypicSynonym.detail=An objective synonym based on the same types
 taxonomicStatus.homotypicSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
-taxonomicStatus.heterotypicSynonym=Heteroptypic/Subjective Synonym
-taxonomicStatus.heterotypicSynonym.annotation=heterotypic/subjective
+taxonomicStatus.heterotypicSynonym=Heteroptypic Synonym
+taxonomicStatus.heterotypicSynonym.annotation=heterotypic
 taxonomicStatus.heterotypicSynonym.detail=A subjective synonym based on different types
 taxonomicStatus.heterotypicSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.objectiveSynonym=Objective Synonym
+taxonomicStatus.objectiveSynonym.annotation=objective
+taxonomicStatus.objectiveSynonym.detail=An objective synonym based on the same types
+taxonomicStatus.objectiveSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
 taxonomicStatus.proParteSynonym=Pro-parte Synonym
 taxonomicStatus.proParteSynonym.annotation=pro-parte
 taxonomicStatus.proParteSynonym.detail=Some specimens of the original type series have been assigned to a new type
@@ -225,10 +229,18 @@ taxonomicStatus.misapplied=Misapplied
 taxonomicStatus.misapplied.annotation=misapplied
 taxonomicStatus.misapplied.detail=A name that has been misapplied to another taxon in a publication
 taxonomicStatus.misapplied.format=<span class="misapplied-name">{0} <span class="accepted-name">(misapplied&nbsp;to&nbsp;{1})</span></span>
+taxonomicStatus.miscellaneousLiterature=Miscellanenous Literature
+taxonomicStatus.miscellaneousLiterature.annotation=miscellanenous literature
+taxonomicStatus.miscellaneousLiterature.detail=A name that is referenced in another publication
+taxonomicStatus.miscellaneousLiterature.format=<span class="miscellaneous-literature-name">{0}&nbsp;- miscellaneous&nbsp;literature</span>
 taxonomicStatus.name=Name
 taxonomicStatus.name.annotation=name
 taxonomicStatus.name.detail=A scientific name
 taxonomicStatus.name.format=<span class="taxon-name">{0}</span>
+taxonomicStatus.subjectiveSynonym=Subjective Synonym
+taxonomicStatus.subjectiveSynonym.annotation=subjective
+taxonomicStatus.subjectiveSynonym.detail=A subjective synonym based on different types
+taxonomicStatus.subjectiveSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
 taxonomicStatus.synonym=Synonym
 taxonomicStatus.synonym.annotation=synonym
 taxonomicStatus.synonym.detail=A name that is a synonym of the accepted name
