--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -243,3 +243,4 @@ taxonomicStatus.unplaced=Unplaced
 taxonomicStatus.unplaced.annotation=unplaced
 taxonomicStatus.unplaced.detail=A scientific name that has not been placed in a taxonomic tree
 taxonomicStatus.unplaced.format=<span class="unplaced-name">{0}</span>
+show.australian.species=Australian Species
