Refactor show tabs to allow skins to decide what tabs make sense. Use show.tabs configuration property to list tabs

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,5 +1,15 @@
 site.title=Atlas of Living Australia
 
+label.classification=Classification
+label.data-partners=Data Partners
+label.gallery=Gallery
+label.indigenous-info=Indigenous Information
+label.literature=Literature
+label.names=Names
+label.overview=Overview
+label.records=Records
+label.sequences=Sequences
+
 facet.TAXON=Species Pages
 facet.INSTITUTION=Institution Pages
 facet.COLLECTION=Collection Pages
