Use new taxon variant information from combined taxonomy

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -1,14 +1,30 @@
 site.title=Atlas of Living Australia
 
+label.acceptedName=Accepted Name
+label.acceptedName.detail=The name currently used for this taxon
 label.classification=Classification
+label.commonName=Common Name
+label.commonName.detail=Vernacular (non-scientific) names for this taxon. These names are not necessarily unique and multiple taxa may share a common name.
 label.data-partners=Data Partners
 label.gallery=Gallery
+label.identifier=Identifier
+label.identifier.detail=The codes used by different sources to identify the taxon and the taxon name. Some identifiers are historical.
 label.indigenous-info=Indigenous Information
 label.literature=Literature
+label.nameAccordingTo=According to:
+label.namePublishedIn=Published in:
+label.name=Name
+label.name.detail=Variants of this name from different sources
 label.names=Names
 label.overview=Overview
 label.records=Records
+label.referencedIn=Referenced in:
 label.sequences=Sequences
+label.source=Source
+label.source.detail=The organisation that supplied the information
+label.synonym=Synonym
+label.synonym.detail=Other names for this taxon
+
 
 facet.TAXON=Species Pages
 facet.INSTITUTION=Institution Pages
@@ -19,6 +35,8 @@ facet.DATARESOURCE=Dataset Pages
 facet.LAYER=Spatial layer
 facet.REGION=Region Pages
 facet.WORDPRESS=Site Pages
+facet.IDENTIFIER=Species Identifier Pages
+facet.TAXONVARIANT=Species Source Pages
 facet.Rank=Taxonomic rank
 facet.rank=Taxonomic rank
 facet.pestStatus=Pest Status
