--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -236,33 +236,42 @@ taxonomicStatus.excluded=Excluded
 taxonomicStatus.excluded.annotation=excluded
 taxonomicStatus.excluded.detail=A name that has been excluded from occurring in a region
 taxonomicStatus.excluded.format=<span class="excluded-name">{0}&nbsp;- excluded&nbsp;name</span>
+taxonomicStatus.homotypicsynonym=Homotypic Synonym
 taxonomicStatus.homotypicSynonym=Homotypic Synonym
 taxonomicStatus.homotypicSynonym.annotation=homotypic
 taxonomicStatus.homotypicSynonym.detail=An objective synonym based on the same types
 taxonomicStatus.homotypicSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.heterotypicsynonym=Heteroptypic Synonym
 taxonomicStatus.heterotypicSynonym=Heteroptypic Synonym
 taxonomicStatus.heterotypicSynonym.annotation=heterotypic
 taxonomicStatus.heterotypicSynonym.detail=A subjective synonym based on different types
 taxonomicStatus.heterotypicSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.objectivesynonym=Objective Synonym
 taxonomicStatus.objectiveSynonym=Objective Synonym
 taxonomicStatus.objectiveSynonym.annotation=objective
 taxonomicStatus.objectiveSynonym.detail=An objective synonym based on the same types
+taxonomicStatus.objectiveSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.incertaesedis=Incertae Sedis
 taxonomicStatus.incertaeSedis=Incertae Sedis
 taxonomicStatus.incertaeSedis.annotation=incertae sedis
 taxonomicStatus.incertaeSedis.detail=A taxon of uncertain placement
 taxonomicStatus.incertaeSedis.format=<span class="incertae-sedis">{0}&nbsp;- incertae&nbsp;sedis</span>
+taxonomicStatus.inferredaccepted=Inferred Accepted
 taxonomicStatus.inferredAccepted=Inferred Accepted
 taxonomicStatus.inferredAccepted.annotation=inferred accepted
 taxonomicStatus.inferredAccepted.detail=A name that is treated as an accepted name by the resolution algorithms
 taxonomicStatus.inferredAccepted.format=<span class="inferred-name accepted-name">{0}</span>
+taxonomicStatus.inferredinvalid=Inferred Invalid
 taxonomicStatus.inferredInvalid=Inferred Invalid
 taxonomicStatus.inferredInvalid.annotation=inferred invalid
 taxonomicStatus.inferredInvalid.detail=A name that is treated as invalid by the resolution alogorithmss
 taxonomicStatus.inferredInvalid.format=<span class="inferred-name invalid-name">{0}&nbsp;- invalid</span>
+taxonomicStatus.inferredsynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym.annotation=inferred synonym
 taxonomicStatus.inferredSynonym.detail=A name that has been made a synonym of an accepted name by the resolution algorithms
 taxonomicStatus.inferredSynonym.format=<span class="inferred-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.inferreduplaced=Inferred Unplaced
 taxonomicStatus.inferredUplaced=Inferred Unplaced
 taxonomicStatus.inferredUnplaced.annotation=inferred unplaced
 taxonomicStatus.inferredUnplaced.detail=A name that is treated as unplaced by the resolution algorithms
@@ -271,7 +280,7 @@ taxonomicStatus.invalid=Invalid
 taxonomicStatus.invalid.annotation=invalid
 taxonomicStatus.invalid.detail=An invalid name
 taxonomicStatus.invalid.format=<span class="invalid-name">{0}&nbsp;- invalid</span>
-taxonomicStatus.objectiveSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.propartesynonym=Pro-parte Synonym
 taxonomicStatus.proParteSynonym=Pro-parte Synonym
 taxonomicStatus.proParteSynonym.annotation=pro-parte
 taxonomicStatus.proParteSynonym.detail=Some specimens of the original type series have been assigned to a new type
@@ -280,6 +289,7 @@ taxonomicStatus.misapplied=Misapplied
 taxonomicStatus.misapplied.annotation=misapplied
 taxonomicStatus.misapplied.detail=A name that has been misapplied to another taxon in a publication
 taxonomicStatus.misapplied.format=<span class="misapplied-name">{0} <span class="accepted-name">(misapplied&nbsp;to&nbsp;{1})</span></span>
+taxonomicStatus.miscellaneousliterature=Miscellaneous Literature
 taxonomicStatus.miscellaneousLiterature=Miscellaneous Literature
 taxonomicStatus.miscellaneousLiterature.annotation=miscellaneous literature
 taxonomicStatus.miscellaneousLiterature.detail=A name that is referenced in another publication
@@ -288,6 +298,7 @@ taxonomicStatus.name=Name
 taxonomicStatus.name.annotation=name
 taxonomicStatus.name.detail=A scientific name
 taxonomicStatus.name.format=<span class="taxon-name">{0}</span>
+taxonomicStatus.subjectivesynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym.annotation=subjective
 taxonomicStatus.subjectiveSynonym.detail=A subjective synonym based on different types
