Extensions to allow additional information from GBIF vernacular extensions

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -5,25 +5,38 @@ label.acceptedName.detail=The name currently used for this taxon
 label.classification=Classification
 label.commonName=Common Name
 label.commonName.detail=Vernacular (non-scientific) names for this taxon. These names are not necessarily unique and multiple taxa may share a common name.
+label.countryCode.vernacular=Country
+label.countryCode.vernacular.detail=This name is used in a specific country
 label.data-partners=Data Partners
 label.gallery=Gallery
 label.identifier=Identifier
 label.identifier.detail=The codes used by different sources to identify the taxon and the taxon name. Some identifiers are historical.
+label.isPlural.vernacular=plural
+label.isPlural.vernacular.detail=This name is the plural form
 label.indigenous-info=Indigenous Information
+label.lifeStage.vernacular=Life Stage
+label.lifeStage.vernacular.detail=This name is used to refer to a specific life stage
 label.literature=Literature
+label.locality.vernacular=Locality
+label.locality.vernacular.detail=This name is used in a specfic geographical region or locality
 label.nameAccordingTo=According to:
 label.namePublishedIn=Published in:
 label.name=Name
 label.name.detail=Variants of this name from different sources
 label.names=Names
+label.organismPart.vernacular.detail=This name is used for a specific part of the organism
 label.overview=Overview
 label.records=Records
 label.referencedIn=Referenced in:
 label.sequences=Sequences
+label.sex.vernacular=Sex
+label.sex.vernacular.detail=This name is used to refer to a specific sex
 label.source=Source
 label.source.detail=The organisation that supplied the information
 label.synonym=Synonym
 label.synonym.detail=Other names for this taxon
+label.temporal.vernacular=Temporal range
+label.temporal.vernacular.detail=This name is used during a specific time or calendar period
 
 
 facet.TAXON=Species Pages
@@ -200,6 +213,20 @@ show.json=JSON
 show.rdf=RDF
 show.view.json.title=View JSON document (data interchange format)
 show.australian.species=Australian Species
+
+commonStatus.common=common
+commonStatus.common.detail=A general common name for this species
+commonStatus.legislated=legislated
+commonStatus.legislated.detail=A name that appears in legislation as a name for the species
+commonStatus.local=local
+commonStatus.local.detail=A locally used name for this species
+commonStatus.preferred=preferred
+commonStatus.preferred.detail=The preferred common name for this species
+commonStatus.standard=standard
+commonStatus.standard.detail=A name that appears in a standards document as a name for the species
+commonStatus.traditionalKnowledge=traditional knowledge
+commonStatus.traditionalKnowledge.detail=A name provided by holders of traditional knowledge
+
 
 identifierFormat.lsid=lsid
 identifierFormat.lsid.detail=An identifier in Life Sciences Identifier format
