Display provenance for identifiers Include discarded status

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -235,6 +235,8 @@ identifierFormat.url.detail=An identifier that is a resolvable URL
 
 identifierStatus.current=current
 identifierStatus.current.detail=An identifier in current use
+identifierStatus.discarded=discarded
+identifierStatus.discarded.detail=An identifier for a taxon discarded in processing that has been mapped onto this taxon
 identifierStatus.historical=historical
 identifierStatus.historical.detail=An identifier that is not in current use
 identifierStatus.replaced=replaced
