Hack fix for #114
Don't try to format accepted names with more than 5 terms/words.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -269,17 +269,17 @@ taxonomicStatus.homotypicsynonym=Homotypic Synonym
 taxonomicStatus.homotypicSynonym=Homotypic Synonym
 taxonomicStatus.homotypicSynonym.annotation=homotypic
 taxonomicStatus.homotypicSynonym.detail=An objective synonym based on the same types
-taxonomicStatus.homotypicSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.homotypicSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.heterotypicsynonym=Heteroptypic Synonym
 taxonomicStatus.heterotypicSynonym=Heteroptypic Synonym
 taxonomicStatus.heterotypicSynonym.annotation=heterotypic
 taxonomicStatus.heterotypicSynonym.detail=A subjective synonym based on different types
-taxonomicStatus.heterotypicSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.heterotypicSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.objectivesynonym=Objective Synonym
 taxonomicStatus.objectiveSynonym=Objective Synonym
 taxonomicStatus.objectiveSynonym.annotation=objective
 taxonomicStatus.objectiveSynonym.detail=An objective synonym based on the same types
-taxonomicStatus.objectiveSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.objectiveSynonym.format=<span class="homotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.incertaesedis=Incertae Sedis
 taxonomicStatus.incertaeSedis=Incertae Sedis
 taxonomicStatus.incertaeSedis.annotation=incertae sedis
@@ -299,7 +299,7 @@ taxonomicStatus.inferredsynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym=Inferred Synonym
 taxonomicStatus.inferredSynonym.annotation=inferred synonym
 taxonomicStatus.inferredSynonym.detail=A name that has been made a synonym of an accepted name by the resolution algorithms
-taxonomicStatus.inferredSynonym.format=<span class="inferred-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.inferredSynonym.format=<span class="inferred-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.inferreduplaced=Inferred Unplaced
 taxonomicStatus.inferredUplaced=Inferred Unplaced
 taxonomicStatus.inferredUnplaced.annotation=inferred unplaced
@@ -313,7 +313,7 @@ taxonomicStatus.propartesynonym=Pro-parte Synonym
 taxonomicStatus.proParteSynonym=Pro-parte Synonym
 taxonomicStatus.proParteSynonym.annotation=pro-parte
 taxonomicStatus.proParteSynonym.detail=Some specimens of the original type series have been assigned to a new type
-taxonomicStatus.proParteSynonym.format=<span class="proparte-name synonym-name">{0} <span class="accepted-name">(pro-parte&nbsp;accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.proParteSynonym.format=<span class="proparte-name synonym-name">{0} <span class="accepted-name">(pro-parte&nbsp;accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.misapplied=Misapplied
 taxonomicStatus.misapplied.annotation=misapplied
 taxonomicStatus.misapplied.detail=A name that has been misapplied to another taxon in a publication
@@ -331,11 +331,11 @@ taxonomicStatus.subjectivesynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym=Subjective Synonym
 taxonomicStatus.subjectiveSynonym.annotation=subjective
 taxonomicStatus.subjectiveSynonym.detail=A subjective synonym based on different types
-taxonomicStatus.subjectiveSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.subjectiveSynonym.format=<span class="heterotypic-name synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.synonym=Synonym
 taxonomicStatus.synonym.annotation=synonym
 taxonomicStatus.synonym.detail=A name that is a synonym of the accepted name
-taxonomicStatus.synonym.format=<span class="synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name&nbsp;{1})</span></span>
+taxonomicStatus.synonym.format=<span class="synonym-name">{0} <span class="accepted-name">(accepted&nbsp;name:&nbsp;{1})</span></span>
 taxonomicStatus.unplaced=Unplaced
 taxonomicStatus.unplaced.annotation=unplaced
 taxonomicStatus.unplaced.detail=A scientific name that has not been placed in a taxonomic tree
