Expose i18n message via endpoint
For jQuery.i18n.properties plugin.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -27,6 +27,7 @@ label.names=Names
 label.organismPart.vernacular.detail=This name is used for a specific part of the organism
 label.overview=Overview
 label.records=Records
+label.no.records.found=No records found
 label.referencedIn=Referenced in:
 label.sequences=Sequences
 label.sex.vernacular=Sex
@@ -340,3 +341,4 @@ taxonomicStatus.unplaced=Unplaced
 taxonomicStatus.unplaced.annotation=unplaced
 taxonomicStatus.unplaced.detail=A scientific name that has not been placed in a taxonomic tree
 taxonomicStatus.unplaced.format=<span class="unplaced-name">{0}</span>
+no.records.found=No occurrence records found
