Make common names more prominent in searches. Include favourite markers.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -96,6 +96,15 @@ facet.category_SA_m_s=SA Category
 facet.category_WA_m_s=WA Category
 facet.category_NT_m_s=NT Category
 
+favourite.favourite=<span class="glyphicon glyphicon-thumbs-up"></span>
+favourite.favourite.detail=Favourite species
+favourite.iconic=<span class="glyphicon glyphicon-thumbs-up"></span>
+favourite.iconic.detail=Iconic species
+favourite.interest=
+favourite.interest.detail=Species of interest
+favourite.preferred=
+favourite.preferred.detail=Preferred species
+
 isLocatedInHubCountry_b.true=Yes
 locatedInHubCountry.true=Yes
 imageAvailable.no=No
