Get literature data from the BHL Pull data from BHL via the BIE Include citation formatting Fix synonym taxonRemarks bug in show.gsp

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -351,3 +351,7 @@ taxonomicStatus.unplaced.annotation=unplaced
 taxonomicStatus.unplaced.detail=A scientific name that has not been placed in a taxonomic tree
 taxonomicStatus.unplaced.format=<span class="unplaced-name">{0}</span>
 no.records.found=No occurrence records found
+
+page.bhl.none=No results found for {0}
+page.bhl.showing=Showing {0} to {1} of {2} for {3}
+page.bhl.title=Biodiversity Heritage Library
