Add knowledgebase label to facets

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -161,6 +161,7 @@ idxtype.COLLECTION=Collection
 idxtype.DATAPROVIDER=Data provider
 idxtype.DATASET=Dataset
 idxtype.DATARESOURCE=Data resource
+idxtype.KNOWLEDGEBASE=Support article
 idxtype.REGION=Region
 idxtype.LOCALITY=Locality
 idxtype.WORDPRESS=Site Page
