Change text in code by file messages.properties for translate bie

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -369,3 +369,95 @@ page.index.title=Search | {0}
 
 page.species.index.heading=Search the {0} for species
 page.species.index.title=Species search | {0}
+
+# Page search specie profile
+search.more=More
+search.resultFine=Refine results
+search.for=Search for
+search.returned=returned
+search.results=results
+search.related=Related Searches
+search.download=Download
+search.results.page=Results per page
+search.sort.by=Sort by
+search.sort.taxon=taxon rank
+search.sort.common=common name
+search.sort.scientific=scientific name
+search.sort.match=best match
+search.sort.order=Sort order
+search.sort.order.ascending=ascending
+search.sort.order.desceding=descending
+search.sort.address=Address here
+search.details.occurrence=Occurrences:
+search.details.view.image=View images of species within this
+search.details.record=Record a sighting/share a photo
+
+# Page overview
+overview.status.conservation=Conservation Status
+overview.online.resources=Online Resources
+overview.datasets=Datasets 
+overview.map.occurrence.records.01=Occurrence records map
+overview.map.occurrence.records.02=records
+overview.map.occurrence.compile.mapa.attribution=Compiled distribution map
+overview.map.occurrence.mapa.attribution.01=Compiled distribution map provided by
+overview.map.occurrence.mapa.attribution.02=data resource not known
+overview.map.submit.photo=Submit a photo
+overview.map.receive.alerts=Receive alerts when new records are added
+overview.datasets.count.have=datasets have 
+overview.datasets.count.provided=provided data to the 
+overview.datasets.count.for=for this
+overview.datasets.lists.01=Browse the list of datasets
+overview.datasets.lists.02=and find organisations you can join if you are interested in participating in a survey for
+overview.datasets.species.of=species of
+overview.datasets.species.like=species like
+
+# Page of gallery
+gallery.titulo=No images available for this taxon
+gallery.description.01=If you have images for this taxon that you would like to share with
+gallery.description.02=please upload using the upload tools.
+gallery.button.collapse=Collapse
+gallery.button.expand=Expand
+
+# Page of names
+names.title=Names and sources
+names.accepted.source=Source
+
+# Page of classification
+classification.title=Classification
+classification.download.child=Download child taxa of
+classification.download.especies=Download species of
+classification.search.child=Search for child taxa of
+
+# Page of images
+images.specie=species
+images.for=Images for
+images.of=Images of
+images.from=from
+images.species=Species images 
+
+# Page of records
+records.list.all.records.button=View list of all occurrence records for this taxon
+records.list.all.map.button=View map of all occurrence records for this taxon
+records.title=Charts showing breakdown of occurrence records
+records=records
+
+# Page of show
+show.name.authority=Name authority
+
+# Page of bhl
+bhl.title.bhl=Biodiversity Heritage Library
+bhl.title.trove=Trove
+bhl.reference.found.bhl=Name references found in the
+bhl.reference.found.bhl.search=Search BHL for references to
+bhl.reference.found.trove=Name references found in
+bhl.search=BHL Search
+bhl.search.bhl=Biodiversity Heritage Library
+bhl.search.wait=Searching, please wait...
+
+# Page of data partners
+data.partners.data.sets=Data sets
+data.partners.data.licenca=Licence
+data.partners.data.records=Records
+
+
+
