IEK support to species pages. Language names appear in header Language names appear in private section Links to language definitions Configrable. This doesn't have to be about IEK specifically, you call pull out sections of common names for this treatment.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -11,9 +11,10 @@ label.data-partners=Data Partners
 label.gallery=Gallery
 label.identifier=Identifier
 label.identifier.detail=The codes used by different sources to identify the taxon and the taxon name. Some identifiers are historical.
+label.in=in
+label.indigenous-info=Indigenous Information
 label.isPlural.vernacular=plural
 label.isPlural.vernacular.detail=This name is the plural form
-label.indigenous-info=Indigenous Information
 label.lifeStage.vernacular=Life Stage
 label.lifeStage.vernacular.detail=This name is used to refer to a specific life stage
 label.literature=Literature
