Display common names as "English Name", rather than "Common Name" in search results.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -3,6 +3,7 @@ site.title=Atlas of Living Australia
 label.acceptedName=Accepted Name
 label.acceptedName.detail=The name currently used for this taxon
 label.classification=Classification
+label.common=Common
 label.commonName=Common Name
 label.commonName.detail=Vernacular (non-scientific) names for this taxon. These names are not necessarily unique and multiple taxa may share a common name.
 label.countryCode.vernacular=Country
@@ -168,6 +169,7 @@ idxtype.LOCALITY=Locality
 idxtype.WORDPRESS=Site Page
 idxtype.LAYER=Spatial layer
 idxtype.COMMON=Common Name
+idxtype.COMMON.formatted={0} Name
 idxtype.IDENTIFIER=Species Identifier
 
 region.Australia=AU
