Basic species only page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -29,6 +29,9 @@ label.overview=Overview
 label.records=Records
 label.no.records.found=No records found
 label.referencedIn=Referenced in:
+label.search=Search
+label.searchAtlas=Search species, datasets and more ...
+label.searchSpecies=Search species
 label.sequences=Sequences
 label.sex.vernacular=Sex
 label.sex.vernacular.detail=This name is used to refer to a specific sex
@@ -356,3 +359,9 @@ no.records.found=No occurrence records found
 page.bhl.none=No results found for {0}
 page.bhl.showing=Showing {0} to {1} of {2} for {3}
 page.bhl.title=Biodiversity Heritage Library
+
+page.index.heading=Search the {0}
+page.index.title=Search | {0}
+
+page.species.index.heading=Search the {0} for species
+page.species.index.title=Species search | {0}
