Remove hard-coded message in search webpage Make record a species URL more configurable.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -29,6 +29,7 @@ label.names=Names
 label.organismPart.vernacular.detail=This name is used for a specific part of the organism
 label.overview=Overview
 label.records=Records
+label.recordSighting=Record a sighting
 label.no.records.found=No records found
 label.referencedIn=Referenced in:
 label.search=Search
