Updated again translations via crowdin-cli. Path fix in crowdin.yml

--- a/grails-app/i18n/messages_ca.properties
+++ b/grails-app/i18n/messages_ca.properties
@@ -3,6 +3,7 @@ site.title=Portal de Dades de GBIF España
 label.acceptedName=Nom acceptat
 label.acceptedName.detail=El nom que actualment s'utilitza per a aquest tàxon
 label.classification=Classificació
+label.common=Comú
 label.commonName=Nom Comú
 label.commonName.detail=Noms comuns (no científics) per a aquest tàxon. Aquests noms no són necessàriament únics i diversos tàxons poden compartir un nom comú.
 label.countryCode.vernacular=País
@@ -11,6 +12,7 @@ label.data-partners=Soci de Dades
 label.gallery=Galeria
 label.identifier=identificador
 label.identifier.detail=Els codis utilitzats per diferents fonts per identificar el tàxon i el nom del tàxon. Alguns identificadors són històrics.
+label.in=a
 label.indigenous-info=Informació indígena
 label.isPlural.vernacular=plural
 label.isPlural.vernacular.detail=Aquest nom és la forma plural
@@ -96,6 +98,12 @@ facet.category_SA_m_s=Categoria SA
 facet.category_WA_m_s=Categoria WA
 facet.category_NT_m_s=Categoria NT
 
+favourite.favourite=<span class\="glyphicon glyphicon-thumbs-up"></span>
+favourite.favourite.detail=Espècies preferides
+favourite.iconic=<span class\="glyphicon glyphicon-thumbs-up"></span>
+favourite.iconic.detail=Espècies icòniques
+favourite.interest.detail=Espècies d'interès
+favourite.preferred.detail=Espècies preferides
 
 isLocatedInHubCountry_b.true=Sí
 locatedInHubCountry.true=Sí
@@ -153,11 +161,13 @@ idxtype.COLLECTION=Col·lecció
 idxtype.DATAPROVIDER=Proveïdor de dades
 idxtype.DATASET=Conjunt de dades
 idxtype.DATARESOURCE=Font de dades
+idxtype.KNOWLEDGEBASE=Article de suport
 idxtype.REGION=Regió
 idxtype.LOCALITY=Localitat
 idxtype.WORDPRESS=Pàgina del Lloc Web
 idxtype.LAYER=Capa espacial
 idxtype.COMMON=Nom Comú
+idxtype.COMMON.formatted={0} Nom
 idxtype.IDENTIFIER=Identificador d'Espècie
 
 region.Australia=AU
@@ -343,4 +353,9 @@ taxonomicStatus.unplaced.annotation=no localitzat
 taxonomicStatus.unplaced.detail=Un nom científic que no s'ha col·locat en un arbre taxonòmic
 taxonomicStatus.unplaced.format=<període classe\="nom-senselocalitzar">{0}</període>
 no.records.found=No s'han trobat registres
+
+page.bhl.none=No s''han trobat resultats per "{0}"
+page.bhl.showing=S''està mostrant {0} a {1} de {2} per a {3}\n\n
+page.bhl.title=Biblioteca del Patrimoni de Biodiversitat
+
 
