--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -3,6 +3,7 @@ site.title=Portal de Datos de GBIF España
 label.acceptedName=Nombre aceptado
 label.acceptedName.detail=El nombre que se utiliza para este taxón actualmente
 label.classification=Clasificación
+label.common=Común
 label.commonName=Nombre Común
 label.commonName.detail=Nombres vernáculos (no científicos) para este taxón. Estos nombres no tienen porqué ser únicos y múltiples taxones pueden compartir un nombre común.
 label.countryCode.vernacular=País
@@ -11,6 +12,7 @@ label.data-partners=Socio de datos
 label.gallery=Galería
 label.identifier=Identificador
 label.identifier.detail=Los códigos utilizados por diversas fuentes para identificar el taxón y el nombre de taxón. Algunos identificadores son históricos.
+label.in=en
 label.indigenous-info=Información indígena
 label.isPlural.vernacular=plural
 label.isPlural.vernacular.detail=Este nombre es la forma plural
@@ -27,8 +29,12 @@ label.names=Nombres
 label.organismPart.vernacular.detail=Este nombre se utiliza para una parte específica del organismo
 label.overview=Resumen
 label.records=Registros
+label.recordSighting=Registrar una observación
 label.no.records.found=No se encontraron registros
 label.referencedIn=Se hace referencia en\:
+label.search=Búsqueda
+label.searchAtlas=Buscar especies, conjuntos de datos y más ...
+label.searchSpecies=Búsqueda de especies
 label.sequences=Secuencias
 label.sex.vernacular=Sexo
 label.sex.vernacular.detail=Este nombre se utiliza para referirse a un sexo específico
@@ -96,6 +102,12 @@ facet.category_SA_m_s=Categoría SA
 facet.category_WA_m_s=Categoría WA
 facet.category_NT_m_s=Categoría NT
 
+favourite.favourite=<span class\="glyphicon glyphicon-thumbs-up"></span>
+favourite.favourite.detail=Especies favoritas
+favourite.iconic=<span class\="glyphicon glyphicon-thumbs-up"></span>
+favourite.iconic.detail=Especies emblemáticas
+favourite.interest.detail=Especies de interés
+favourite.preferred.detail=Especies preferidas
 
 isLocatedInHubCountry_b.true=Sí
 locatedInHubCountry.true=Sí
@@ -153,11 +165,13 @@ idxtype.COLLECTION=Colección
 idxtype.DATAPROVIDER=Proveedor de datos
 idxtype.DATASET=Juego de datos
 idxtype.DATARESOURCE=Recurso de datos
+idxtype.KNOWLEDGEBASE=Artículo de apoyo
 idxtype.REGION=Región
 idxtype.LOCALITY=Localidad
 idxtype.WORDPRESS=Página del Sitio Web
 idxtype.LAYER=Capa espacial
 idxtype.COMMON=Nombre Común
+idxtype.COMMON.formatted=Nombre de {0}
 idxtype.IDENTIFIER=Identificador de la Especie
 
 region.Australia=AU
@@ -344,3 +358,12 @@ taxonomicStatus.unplaced.detail=Un nombre científico que no ha sido clasificado
 taxonomicStatus.unplaced.format=<span class\="unplaced-name">{0}</span>
 no.records.found=No se han encontrado registros
 
+page.bhl.none=No se han encontrado resultados para {0}
+page.bhl.showing=Mostrando de {0} a {1} de {2} para {3}
+page.bhl.title=Biodiversity Heritage Library (BHL)
+
+page.index.heading=Buscar en el {0}
+page.index.title=Búsqueda | {0}
+
+page.species.index.heading=Busqueda de especies en {0}
+page.species.index.title=Búsqueda de especies | {0}
