German translations resynced

--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -29,8 +29,12 @@ label.names=Namen
 label.organismPart.vernacular.detail=Dieser Name wird für einen bestimmten Teil des Lebewesens verwendet
 label.overview=Übersicht
 label.records=Dateneinträge
+label.recordSighting=Eine Beobachtung melden
 label.no.records.found=Keine Einträge gefunden
 label.referencedIn=Verweis in\:
+label.search=Suchen
+label.searchAtlas=Suchen Sie Arten, Datensätze und mehr ...
+label.searchSpecies=Arten suchen
 label.sequences=Sequenzen
 label.sex.vernacular=Geschlecht
 label.sex.vernacular.detail=Dieser Name wird für ein bestimmtes Geschlecht verwendet
@@ -358,4 +362,8 @@ page.bhl.none=Keine Ergebnisse für {0} gefunden
 page.bhl.showing=Zeige {0} bis {1} von {2} bis {3} Einträgen
 page.bhl.title=Biodiversity Heritage Library
 
+page.index.heading={0} durchsuchen
+page.index.title=Suchen | {0}
 
+page.species.index.heading={0} nach Arten durchsuchen
+page.species.index.title=Artensuche | {0}
